@@ -1,0 +1,10 @@
+Title: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
+Level: 1
+Component: wato
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i3p1
+Date: 1482335663
+
+
