@@ -17,6 +17,7 @@
 
     WATO:
     * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
+    * 4218 FIX: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
 
     Notifications:
     * 4197 FIX: Fix sending notification to global fallback email address
